--- a/app/src/main/res/layout/fragment_log_dialog.xml
+++ b/app/src/main/res/layout/fragment_log_dialog.xml
@@ -9,7 +9,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backToTaskSuccessButton"
         android:layout_width="155dp"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
@@ -60,7 +60,7 @@
         android:layout_width="155dp"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_deep_yellow"
         android:gravity="center"
         android:text="留下紀錄"
         android:textColor="@color/white"
