--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -21,7 +21,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/button_border"
             android:gravity="center"
-            android:text="AppWorks 美食大挑戰"
+            tools:text="AppWorks 美食大挑戰"
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -56,7 +56,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center"
-            android:text="總共花費??小時"
+            tools:text="總共花費??小時"
             android:textColor="@color/grey"
             android:textSize="20sp"
             android:textStyle="bold"
