--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -9,12 +9,38 @@ tools:context=".community.CommunityFragment">
     <com.zhpan.bannerview.BannerViewPager
         android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="190dp"
         android:layout_margin="10dp"
         android:layout_marginTop="16dp"
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tagRecycler"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        mapbox:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        mapbox:layout_constraintEnd_toEndOf="@+id/banner_view"
+        mapbox:layout_constraintStart_toStartOf="@+id/banner_view"
+        mapbox:layout_constraintTop_toBottomOf="@+id/banner_view" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/challengeRecycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_border_deep_yellow"
+        android:padding="6dp"
+        mapbox:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="@+id/tagRecycler"
+        mapbox:layout_constraintStart_toStartOf="@+id/tagRecycler"
+        mapbox:layout_constraintTop_toBottomOf="@+id/tagRecycler"
+        mapbox:spanCount="2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
