--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -31,7 +31,7 @@ tools:context=".community.CommunityFragment">
         android:id="@+id/challengeRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_border_deep_yellow"
         android:padding="6dp"
@@ -39,8 +39,47 @@ tools:context=".community.CommunityFragment">
         mapbox:layout_constraintBottom_toBottomOf="parent"
         mapbox:layout_constraintEnd_toEndOf="@+id/tagRecycler"
         mapbox:layout_constraintStart_toStartOf="@+id/tagRecycler"
-        mapbox:layout_constraintTop_toBottomOf="@+id/tagRecycler"
+        mapbox:layout_constraintTop_toBottomOf="@+id/searchText"
         mapbox:spanCount="2" />
+
+    <EditText
+        android:id="@+id/searchText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/community_searchbar_border"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="text"
+        android:maxLength="35"
+        android:maxLines="1"
+        android:paddingStart="20dp"
+        android:paddingTop="3dp"
+        android:paddingEnd="38dp"
+        android:paddingBottom="3dp"
+        mapbox:layout_constraintEnd_toEndOf="@+id/tagRecycler"
+        mapbox:layout_constraintHorizontal_bias="0.0"
+        mapbox:layout_constraintStart_toStartOf="@+id/tagRecycler"
+        mapbox:layout_constraintTop_toBottomOf="@+id/tagRecycler" />
+
+    <ImageView
+        android:id="@+id/communitySearchIcon"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_search"
+        mapbox:layout_constraintBottom_toBottomOf="@+id/searchText"
+        mapbox:layout_constraintEnd_toEndOf="@+id/searchText"
+        mapbox:layout_constraintTop_toTopOf="@+id/searchText" />
+
+    <ImageView
+        android:id="@+id/searchView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        mapbox:layout_constraintBottom_toBottomOf="@+id/searchText"
+        mapbox:layout_constraintEnd_toEndOf="@+id/searchText"
+        mapbox:layout_constraintStart_toStartOf="@+id/communitySearchIcon"
+        mapbox:layout_constraintTop_toTopOf="@+id/searchText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
