--- a/app/src/main/res/layout/item_community_challenge.xml
+++ b/app/src/main/res/layout/item_community_challenge.xml
@@ -59,6 +59,7 @@
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
+        android:ellipsize="end"
         android:shadowColor="#000000"
         android:shadowDx="1.5"
         android:shadowDy="1.3"
