--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -23,8 +23,8 @@ tools:context=".community.CommunityFragment">
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         mapbox:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        mapbox:layout_constraintEnd_toEndOf="@+id/banner_view"
-        mapbox:layout_constraintStart_toStartOf="@+id/banner_view"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toBottomOf="@+id/banner_view" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -34,10 +34,12 @@ tools:context=".community.CommunityFragment">
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_border_deep_yellow"
-        android:padding="6dp"
+        android:paddingStart="6dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="6dp"
         mapbox:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         mapbox:layout_constraintBottom_toBottomOf="parent"
-        mapbox:layout_constraintEnd_toEndOf="@+id/tagRecycler"
+        mapbox:layout_constraintEnd_toEndOf="@+id/banner_view"
         mapbox:layout_constraintStart_toStartOf="@+id/tagRecycler"
         mapbox:layout_constraintTop_toBottomOf="@+id/searchText"
         mapbox:spanCount="2" />
@@ -57,9 +59,8 @@ tools:context=".community.CommunityFragment">
         android:paddingTop="3dp"
         android:paddingEnd="38dp"
         android:paddingBottom="3dp"
-        mapbox:layout_constraintEnd_toEndOf="@+id/tagRecycler"
-        mapbox:layout_constraintHorizontal_bias="0.0"
-        mapbox:layout_constraintStart_toStartOf="@+id/tagRecycler"
+        mapbox:layout_constraintEnd_toEndOf="@+id/banner_view"
+        mapbox:layout_constraintStart_toStartOf="@+id/banner_view"
         mapbox:layout_constraintTop_toBottomOf="@+id/tagRecycler" />
 
     <ImageView
