--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -134,11 +134,10 @@ tools:context=".profile.ProfileFragment">
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         mapbox:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         mapbox:layout_constraintEnd_toEndOf="parent"
-        mapbox:layout_constraintStart_toStartOf="@+id/profileCompletedChallenges"
+        mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toBottomOf="@+id/profileCompletedChallenges" />
 
     <ImageView
