--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="light_yellow_no_change">#fbe493</color>
     <color name="deep_yellow">#FFC020</color>
     <color name="deep_grey">#423F3A</color>
+    <color name="orange">#FF8C00</color>
     <color name="deep_yellow_no_change">#fcd340</color>
     <color name="grey">#8E8B81</color>
     <color name="grey_cccccc">#cccccc</color>
