--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -40,7 +40,7 @@ tools:context=".community.CommunityFragment">
         mapbox:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         mapbox:layout_constraintBottom_toBottomOf="parent"
         mapbox:layout_constraintEnd_toEndOf="@+id/banner_view"
-        mapbox:layout_constraintStart_toStartOf="@+id/tagRecycler"
+        mapbox:layout_constraintStart_toStartOf="@+id/searchText"
         mapbox:layout_constraintTop_toBottomOf="@+id/searchText"
         mapbox:spanCount="2" />
 
