--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -27,17 +27,18 @@
     <TextView
         android:id="@+id/introductionContent"
 
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/introductionTitle"
-        tools:text="安妮亞喜歡這個 𓁹‿𓁹  " />
+        tools:text="安妮亞喜歡這個 𓁹‿𓁹" />
 
     <TextView
         android:id="@+id/introductionTitle"
