--- a/app/src/main/res/layout/item_community_challenge.xml
+++ b/app/src/main/res/layout/item_community_challenge.xml
@@ -64,6 +64,7 @@
         android:shadowDx="1.5"
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
+        android:singleLine="true"
         android:text="台灣, 台北市"
         android:textAllCaps="true"
         android:textColor="@color/white"
