--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
         android:id="@+id/activity_main_bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:itemIconTint="@color/bottom_nav_color"
         app:itemRippleColor="@color/light_yellow"
         app:itemTextColor="@color/bottom_nav_color"
@@ -80,6 +81,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation_menu" />
+
+<!--    <com.tenclouds.fluidbottomnavigation.FluidBottomNavigation-->
+<!--        android:id="@+id/fluidBottomNavigation"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="80dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/toolbar" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
