fix no gps null pointer exception bug

--- a/app/src/main/res/layout/fragment_challenge_detail.xml
+++ b/app/src/main/res/layout/fragment_challenge_detail.xml
@@ -101,7 +101,7 @@
                 mapbox:layout_constraintBottom_toBottomOf="@+id/location"
                 mapbox:layout_constraintStart_toEndOf="@+id/location"
                 mapbox:layout_constraintTop_toTopOf="@+id/location"
-                tools:text="距離起點 ?? Ms" />
+                android:text="@string/no_gps" />
 
             <TextView
                 android:id="@+id/stageText"
