--- a/app/src/main/res/layout/item_task_task.xml
+++ b/app/src/main/res/layout/item_task_task.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="5 ms"
+                android:text="@string/no_gps"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/taskLocationIcon"
