--- a/app/src/main/res/layout/fragment_challenge_type.xml
+++ b/app/src/main/res/layout/fragment_challenge_type.xml
@@ -41,6 +41,10 @@
         android:id="@+id/lottieAnimation"
         android:layout_width="584dp"
         android:layout_height="1041dp"
+        android:layout_marginStart="-40dp"
+        android:layout_marginTop="-40dp"
+        android:layout_marginEnd="-40dp"
+        android:layout_marginBottom="-40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
