--- a/app/src/main/res/layout/fragmet_chat_dialog.xml
+++ b/app/src/main/res/layout/fragmet_chat_dialog.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <EditText
@@ -19,17 +19,18 @@
         android:paddingStart="4dp"
         android:paddingLeft="3dp"
         android:paddingTop="4dp"
-        android:paddingEnd="38dp"
+        android:paddingEnd="42dp"
         android:paddingBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerMessage"
+        android:id="@+id/messageRecycler"
         android:layout_width="0dp"
         android:layout_height="550dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -44,8 +45,8 @@
         android:id="@+id/closeIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_close" />
@@ -55,7 +56,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextMessage"
         app:layout_constraintTop_toTopOf="@+id/editTextMessage"
         app:srcCompat="@drawable/ic_send_blue" />
@@ -64,11 +65,38 @@
         android:id="@+id/removePersonIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:visibility="invisible"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_person_remove" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/memberRecycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="@+id/removePersonIcon"
+        app:layout_constraintEnd_toStartOf="@+id/closeIcon"
+        app:layout_constraintStart_toEndOf="@+id/removePersonIcon"
+        app:layout_constraintTop_toTopOf="@+id/removePersonIcon"
+        app:reverseLayout="true"
+        app:stackFromEnd="true" />
+
+    <TextView
+        android:id="@+id/greyLine11"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/grey_cccccc"
+        app:layout_constraintBottom_toTopOf="@+id/messageRecycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/memberRecycler" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
