--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -198,4 +198,14 @@ tools:context=".profile.ProfileFragment">
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toBottomOf="@+id/settings" />
+
+    <TextView
+        android:id="@+id/notificationIcon"
+        android:layout_width="8dp"
+        android:layout_height="8dp"
+        android:layout_marginStart="42dp"
+        android:background="@drawable/circle_text_border"
+        android:visibility="gone"
+        mapbox:layout_constraintStart_toStartOf="@+id/notification"
+        mapbox:layout_constraintTop_toTopOf="@+id/notification" />
 </androidx.constraintlayout.widget.ConstraintLayout>
