modify chat room ui

--- a/app/src/main/res/layout/fragmet_chat_dialog.xml
+++ b/app/src/main/res/layout/fragmet_chat_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/chat_room_edit_text_border"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
@@ -22,7 +22,7 @@
         android:paddingEnd="42dp"
         android:paddingBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/sendIcon"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -38,35 +38,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/closeIcon"
+        app:layout_constraintTop_toBottomOf="@+id/greyLine11"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/closeIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_close" />
 
     <ImageView
         android:id="@+id/sendIcon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextMessage"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/editTextMessage"
-        app:srcCompat="@drawable/ic_send_blue" />
+        app:srcCompat="@drawable/ic_send_black" />
 
     <ImageView
         android:id="@+id/removePersonIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -81,7 +81,7 @@
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@+id/removePersonIcon"
-        app:layout_constraintEnd_toStartOf="@+id/closeIcon"
+        app:layout_constraintEnd_toStartOf="@+id/chatRoom"
         app:layout_constraintStart_toEndOf="@+id/removePersonIcon"
         app:layout_constraintTop_toTopOf="@+id/removePersonIcon"
         app:reverseLayout="true"
@@ -91,12 +91,23 @@
         android:id="@+id/greyLine11"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:background="@color/grey_cccccc"
         app:layout_constraintBottom_toTopOf="@+id/messageRecycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/memberRecycler" />
+
+    <TextView
+        android:id="@+id/chatRoom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="聊天室"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/removePersonIcon"
+        app:layout_constraintEnd_toStartOf="@+id/closeIcon"
+        app:layout_constraintStart_toEndOf="@+id/removePersonIcon"
+        app:layout_constraintTop_toTopOf="@+id/removePersonIcon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
